ev_site_macros/tests/fail/non_ident_tier.rs
use ev_site_macros::tiered;

fn main() {
	tiered! {
		Block { tier: 1 + 2 }
	};
}
