ev_site_macros/tests/fail/non_ident_tier.stderr
error: expected one of `P0`, `P1`, `P2`, `P3`
 --> tests/fail/non_ident_tier.rs:5:17
  |
5 |         Block { tier: 1 + 2 }
  |                       ^^^^^
  |
  = note: -Ztrack-diagnostics: created at /rustc-dev/8b03437a8ffc8f8b01e62ef5fce82a37ada09b12/compiler/rustc_builtin_macros/src/compile_error.rs:22:25
